ftp/1.6/modules/ROOT/pages/ftp-examples.adoc
= FTP Connector Examples - Mule 4

To fully benefit from using Anypoint Connector for FTP (FTP Connector), see the following examples of configuring the connector operations:

* xref:ftp-read.adoc[Read a File] +
Configure the *Read* operation to read a file at any point in the flow.
* xref:ftp-write.adoc[Write a File] +
Configure the *Write* operation to write content into the given path on demand.
* xref:ftp-list.adoc[List Files] +
Configure the *List* operation to list the files and folders in the configured directory path.
* xref:ftp-copy-move.adoc[Copy and Move Files] +
Configure the *Copy* and *Move* operations to copy or move files or directories on demand.
* xref:ftp-on-new-file.adoc[Trigger a Flow for a Newly Created or Updated File] +
Configure the *On New or Updated File* source to trigger a flow for a new created or modified file.
* xref:ftp-connection.adoc[Connect to an FTP Server] +
Configure the *FTP Connector* global configuration element to connect to an FTP server.
* xref:ftp-dynamic-connection.adoc[Connect to FTP Servers Dynamically] +
Configure the *FTP Connector* to connect dynamically to multiple servers.
* xref:ftp-proxy-configuration.adoc[Configure a Proxy for FTP Connector] +
Configure the *Proxy* field to either HTTP or HTTP tunnel proxy.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
